ENH: Update CashValue_ME_EX4

--- a/lifelib/libraries/savings/savings_example4.ipynb
+++ b/lifelib/libraries/savings/savings_example4.ipynb
@@ -41,7 +41,7 @@
     {
      "data": {
       "text/plain": [
-       "1.2440227998886257"
+       "1.2689610000234097"
       ]
      },
      "execution_count": 3,
@@ -82,7 +82,7 @@
     {
      "data": {
       "text/plain": [
-       "0.8405095001216978"
+       "0.526920499978587"
       ]
      },
      "execution_count": 6,
@@ -117,7 +117,7 @@
    "id": "e7a25c30",
    "metadata": {},
    "source": [
-    "## Compare the models with 100,000 scenarios\n",
+    "## Testing with 100,000 scenarios\n",
     "\n",
     "TODO: Add description\n",
     "\n",
@@ -149,7 +149,7 @@
     {
      "data": {
       "text/plain": [
-       "8.051920400001109"
+       "7.84547259984538"
       ]
      },
      "execution_count": 9,
@@ -190,7 +190,7 @@
     {
      "data": {
       "text/plain": [
-       "6.547852599993348"
+       "3.8828028000425547"
       ]
      },
      "execution_count": 12,
@@ -295,53 +295,53 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>surr_charge_rate(t)</th>\n",
-       "      <td>0.624001</td>\n",
-       "      <td>36.920117</td>\n",
+       "      <td>0.626154</td>\n",
+       "      <td>36.491786</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>inv_return_mth(t)</th>\n",
-       "      <td>0.269719</td>\n",
-       "      <td>15.958412</td>\n",
+       "      <td>0.291798</td>\n",
+       "      <td>17.005771</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>premium_pp(t)</th>\n",
-       "      <td>0.242344</td>\n",
-       "      <td>14.338736</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>prem_to_av_pp(t)</th>\n",
-       "      <td>0.056426</td>\n",
-       "      <td>3.338562</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>pols_new_biz(t)</th>\n",
-       "      <td>0.053761</td>\n",
-       "      <td>3.180880</td>\n",
+       "      <td>0.206414</td>\n",
+       "      <td>12.029663</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>claim_pp(t, kind)</th>\n",
-       "      <td>0.050353</td>\n",
-       "      <td>2.979228</td>\n",
+       "      <td>0.077510</td>\n",
+       "      <td>4.517216</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>av_pp_at(t, timing)</th>\n",
-       "      <td>0.040608</td>\n",
-       "      <td>2.402669</td>\n",
+       "      <th>claims(t, kind)</th>\n",
+       "      <td>0.063502</td>\n",
+       "      <td>3.700866</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>pols_if_at(t, timing)</th>\n",
-       "      <td>0.036391</td>\n",
-       "      <td>2.153168</td>\n",
+       "      <td>0.038705</td>\n",
+       "      <td>2.255718</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>av_pp_at(t, timing)</th>\n",
+       "      <td>0.034805</td>\n",
+       "      <td>2.028384</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>inv_return_table()</th>\n",
+       "      <td>0.031250</td>\n",
+       "      <td>1.821226</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>expenses(t)</th>\n",
+       "      <td>0.029133</td>\n",
+       "      <td>1.697868</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>inv_income(t)</th>\n",
-       "      <td>0.031674</td>\n",
-       "      <td>1.874071</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>pv_claims(kind)</th>\n",
-       "      <td>0.031282</td>\n",
-       "      <td>1.850866</td>\n",
+       "      <td>0.027631</td>\n",
+       "      <td>1.610330</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -349,16 +349,16 @@
       ],
       "text/plain": [
        "                       duration   dur_perc\n",
-       "surr_charge_rate(t)    0.624001  36.920117\n",
-       "inv_return_mth(t)      0.269719  15.958412\n",
-       "premium_pp(t)          0.242344  14.338736\n",
-       "prem_to_av_pp(t)       0.056426   3.338562\n",
-       "pols_new_biz(t)        0.053761   3.180880\n",
-       "claim_pp(t, kind)      0.050353   2.979228\n",
-       "av_pp_at(t, timing)    0.040608   2.402669\n",
-       "pols_if_at(t, timing)  0.036391   2.153168\n",
-       "inv_income(t)          0.031674   1.874071\n",
-       "pv_claims(kind)        0.031282   1.850866"
+       "surr_charge_rate(t)    0.626154  36.491786\n",
+       "inv_return_mth(t)      0.291798  17.005771\n",
+       "premium_pp(t)          0.206414  12.029663\n",
+       "claim_pp(t, kind)      0.077510   4.517216\n",
+       "claims(t, kind)        0.063502   3.700866\n",
+       "pols_if_at(t, timing)  0.038705   2.255718\n",
+       "av_pp_at(t, timing)    0.034805   2.028384\n",
+       "inv_return_table()     0.031250   1.821226\n",
+       "expenses(t)            0.029133   1.697868\n",
+       "inv_income(t)          0.027631   1.610330"
       ]
      },
      "execution_count": 15,
@@ -367,7 +367,7 @@
     }
    ],
    "source": [
-    "ex1.Projection.scen_size = 10000\n",
+    "ex1.Projection.scen_size = 10_000\n",
     "df1 = get_time_info(ex1)\n",
     "df1[['duration', 'dur_perc']].iloc[:10]"
    ]
@@ -376,7 +376,9 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "00a0f818",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -414,70 +416,70 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>surr_charge_rate(t)</th>\n",
-       "      <td>0.545975</td>\n",
-       "      <td>45.629918</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>inv_return_table()</th>\n",
-       "      <td>0.256201</td>\n",
-       "      <td>21.412039</td>\n",
+       "      <td>0.204015</td>\n",
+       "      <td>37.341396</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>premium_pp(t)</th>\n",
-       "      <td>0.107633</td>\n",
-       "      <td>8.995453</td>\n",
+       "      <td>0.115471</td>\n",
+       "      <td>21.134984</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>pols_new_biz(t)</th>\n",
-       "      <td>0.027895</td>\n",
-       "      <td>2.331327</td>\n",
+       "      <th>pv_claims(kind)</th>\n",
+       "      <td>0.031336</td>\n",
+       "      <td>5.735535</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>inv_income_pp(t)</th>\n",
-       "      <td>0.027172</td>\n",
-       "      <td>2.270911</td>\n",
+       "      <th>inv_return_table()</th>\n",
+       "      <td>0.023608</td>\n",
+       "      <td>4.320994</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>surr_charge(t)</th>\n",
-       "      <td>0.026547</td>\n",
-       "      <td>2.218706</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mort_table_last_age()</th>\n",
-       "      <td>0.022545</td>\n",
-       "      <td>1.884170</td>\n",
+       "      <th>lapse_rate(t)</th>\n",
+       "      <td>0.022686</td>\n",
+       "      <td>4.152201</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>prem_to_av_pp(t)</th>\n",
-       "      <td>0.020173</td>\n",
-       "      <td>1.685928</td>\n",
+       "      <td>0.018686</td>\n",
+       "      <td>3.420122</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>claims(t, kind)</th>\n",
-       "      <td>0.019646</td>\n",
-       "      <td>1.641892</td>\n",
+       "      <th>av_change(t)</th>\n",
+       "      <td>0.016086</td>\n",
+       "      <td>2.944244</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>pols_if_at(t, timing)</th>\n",
-       "      <td>0.019297</td>\n",
-       "      <td>1.612740</td>\n",
+       "      <th>commissions(t)</th>\n",
+       "      <td>0.015623</td>\n",
+       "      <td>2.859585</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>premiums(t)</th>\n",
+       "      <td>0.015507</td>\n",
+       "      <td>2.838290</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std_norm_rand()</th>\n",
+       "      <td>0.012620</td>\n",
+       "      <td>2.309915</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                       duration   dur_perc\n",
-       "surr_charge_rate(t)    0.545975  45.629918\n",
-       "inv_return_table()     0.256201  21.412039\n",
-       "premium_pp(t)          0.107633   8.995453\n",
-       "pols_new_biz(t)        0.027895   2.331327\n",
-       "inv_income_pp(t)       0.027172   2.270911\n",
-       "surr_charge(t)         0.026547   2.218706\n",
-       "mort_table_last_age()  0.022545   1.884170\n",
-       "prem_to_av_pp(t)       0.020173   1.685928\n",
-       "claims(t, kind)        0.019646   1.641892\n",
-       "pols_if_at(t, timing)  0.019297   1.612740"
+       "                     duration   dur_perc\n",
+       "surr_charge_rate(t)  0.204015  37.341396\n",
+       "premium_pp(t)        0.115471  21.134984\n",
+       "pv_claims(kind)      0.031336   5.735535\n",
+       "inv_return_table()   0.023608   4.320994\n",
+       "lapse_rate(t)        0.022686   4.152201\n",
+       "prem_to_av_pp(t)     0.018686   3.420122\n",
+       "av_change(t)         0.016086   2.944244\n",
+       "commissions(t)       0.015623   2.859585\n",
+       "premiums(t)          0.015507   2.838290\n",
+       "std_norm_rand()      0.012620   2.309915"
       ]
      },
      "execution_count": 16,
@@ -486,7 +488,7 @@
     }
    ],
    "source": [
-    "ex4.Projection.scen_size = 10000\n",
+    "ex4.Projection.scen_size = 10_000\n",
     "df4 = get_time_info(ex4)\n",
     "df4[['duration', 'dur_perc']].iloc[:10]"
    ]
@@ -495,7 +497,9 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "63b6dff5",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -525,38 +529,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>surr_charge_rate(t)</th>\n",
-       "      <td>0.624001</td>\n",
-       "      <td>0.545975</td>\n",
+       "      <td>0.626154</td>\n",
+       "      <td>0.204015</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>inv_return_mth(t)</th>\n",
-       "      <td>0.269719</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.291798</td>\n",
+       "      <td>0.002037</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>premium_pp(t)</th>\n",
-       "      <td>0.242344</td>\n",
-       "      <td>0.107633</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>prem_to_av_pp(t)</th>\n",
-       "      <td>0.056426</td>\n",
-       "      <td>0.020173</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>pols_new_biz(t)</th>\n",
-       "      <td>0.053761</td>\n",
-       "      <td>0.027895</td>\n",
+       "      <td>0.206414</td>\n",
+       "      <td>0.115471</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>claim_pp(t, kind)</th>\n",
-       "      <td>0.050353</td>\n",
-       "      <td>0.005729</td>\n",
+       "      <td>0.077510</td>\n",
+       "      <td>0.002008</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>inv_return_table()</th>\n",
-       "      <td>0.015044</td>\n",
-       "      <td>0.256201</td>\n",
+       "      <th>claims(t, kind)</th>\n",
+       "      <td>0.063502</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -564,13 +558,11 @@
       ],
       "text/plain": [
        "                          df1       df4\n",
-       "surr_charge_rate(t)  0.624001  0.545975\n",
-       "inv_return_mth(t)    0.269719  0.000000\n",
-       "premium_pp(t)        0.242344  0.107633\n",
-       "prem_to_av_pp(t)     0.056426  0.020173\n",
-       "pols_new_biz(t)      0.053761  0.027895\n",
-       "claim_pp(t, kind)    0.050353  0.005729\n",
-       "inv_return_table()   0.015044  0.256201"
+       "surr_charge_rate(t)  0.626154  0.204015\n",
+       "inv_return_mth(t)    0.291798  0.002037\n",
+       "premium_pp(t)        0.206414  0.115471\n",
+       "claim_pp(t, kind)    0.077510  0.002008\n",
+       "claims(t, kind)      0.063502  0.000000"
       ]
      },
      "execution_count": 17,
