Fix: Match CSM in ifrs17a

--- a/lifelib/libraries/ifrs17a/Template-notebook.ipynb
+++ b/lifelib/libraries/ifrs17a/Template-notebook.ipynb
@@ -217,7 +217,7 @@
        "      <td>0.0</td>\n",
        "      <td>C</td>\n",
        "      <td></td>\n",
-       "      <td>-27.222312</td>\n",
+       "      <td>-23.389003</td>\n",
        "      <td>CH</td>\n",
        "      <td>2021</td>\n",
        "      <td>...</td>\n",
@@ -265,7 +265,7 @@
        "      <td>0.0</td>\n",
        "      <td>C</td>\n",
        "      <td></td>\n",
-       "      <td>-0.043926</td>\n",
+       "      <td>-0.038546</td>\n",
        "      <td>CH</td>\n",
        "      <td>2021</td>\n",
        "      <td>...</td>\n",
@@ -354,9 +354,9 @@
        "3                L -798.536731            CH  2020  ...                 CHF   \n",
        "4                L  598.752945            CH  2020  ...                 CHF   \n",
        "...            ...         ...           ...   ...  ...                 ...   \n",
-       "1751                -27.222312            CH  2021  ...                 CHF   \n",
+       "1751                -23.389003            CH  2021  ...                 CHF   \n",
        "1752                -27.567249            CH  2021  ...                 CHF   \n",
-       "1753                 -0.043926            CH  2021  ...                 CHF   \n",
+       "1753                 -0.038546            CH  2021  ...                 CHF   \n",
        "1754                 -0.008150            CH  2021  ...                 CHF   \n",
        "1755                -52.922953            CH  2021  ...                 CHF   \n",
        "\n",
@@ -1010,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "d6fe6fc9",
    "metadata": {},
    "outputs": [
@@ -1027,22 +1027,13 @@
        "        vertical-align: top;\n",
        "    }\n",
        "\n",
-       "    .dataframe thead tr th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead tr:last-of-type th {\n",
+       "    .dataframe thead th {\n",
        "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
-       "    <tr>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th colspan=\"3\" halign=\"left\">Value</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
+       "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>EstimateType</th>\n",
        "      <th>C</th>\n",
@@ -1061,7 +1052,7 @@
        "    <tr>\n",
        "      <th rowspan=\"4\" valign=\"top\">C</th>\n",
        "      <th>AM</th>\n",
-       "      <td>-5.089621</td>\n",
+       "      <td>-18.986561</td>\n",
        "      <td>-8.128297</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
@@ -1079,14 +1070,14 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>EOP</th>\n",
-       "      <td>24.554565</td>\n",
+       "      <td>39.887800</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"4\" valign=\"top\">I</th>\n",
        "      <th>BOP</th>\n",
-       "      <td>185.664990</td>\n",
+       "      <td>228.735710</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
@@ -1098,7 +1089,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>IA</th>\n",
-       "      <td>0.357341</td>\n",
+       "      <td>0.378860</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
@@ -1132,30 +1123,29 @@
        "</div>"
       ],
       "text/plain": [
-       "                      Value                        \n",
        "EstimateType              C           L          LR\n",
        "Novelty AocType                                    \n",
-       "C       AM        -5.089621   -8.128297    0.000000\n",
+       "C       AM       -18.986561   -8.128297    0.000000\n",
        "        CL      -404.060267 -524.588133  173.041579\n",
        "        EA      -299.871703    8.128297    0.000000\n",
-       "        EOP       24.554565    0.000000    0.000000\n",
-       "I       BOP      185.664990    0.000000    0.000000\n",
+       "        EOP       39.887800    0.000000    0.000000\n",
+       "I       BOP      228.735710    0.000000    0.000000\n",
        "        CRU       -2.373251    0.000000    0.000000\n",
-       "        IA         0.357341    0.000000    0.000000\n",
+       "        IA         0.378860    0.000000    0.000000\n",
        "        MC       529.552287    0.000000    0.000000\n",
        "N       BOP        8.004654  191.752434  -62.739983\n",
        "        EV        -1.492264  332.737896 -110.268995\n",
        "        IA         0.000336    0.097803   -0.032601"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_TM = df.loc[(df['EstimateType'] == 'LR') | (df['EstimateType'] == 'L') | (df['EstimateType'] == 'C')]\n",
-    "TM = df_TM[['AocType', 'Novelty', 'Value', 'EstimateType']].set_index(['Novelty', 'AocType', 'EstimateType']).groupby(level=list(range(3))).sum().unstack(level=[-1])\n",
+    "TM = df_TM[['AocType', 'Novelty', 'Value', 'EstimateType']].set_index(['Novelty', 'AocType', 'EstimateType'])['Value'].groupby(level=list(range(3))).sum().unstack(level=[-1])\n",
     "TM.fillna(0)"
    ]
   }
